--- a/ITSC/Base.lproj/Main.storyboard
+++ b/ITSC/Base.lproj/Main.storyboard
@@ -365,7 +365,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mkb-ce-s5J">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mkb-ce-s5J">
                                 <rect key="frame" x="52" y="160.5" width="310.5" height="580"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Label">
@@ -376,19 +376,39 @@
                                     </fragment>
                                 </attributedString>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" hidden="NO"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" showsExpansionTextWhenTruncated="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Udp-eV-PTS">
+                                <rect key="frame" x="52" y="158" width="310.5" height="580"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="CLabel">
+                                        <attributes>
+                                            <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" hidden="YES"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="pWO-r2-bl6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Udp-eV-PTS" firstAttribute="width" secondItem="pWO-r2-bl6" secondAttribute="width" multiplier="0.75" id="34C-SU-db3"/>
                             <constraint firstItem="mkb-ce-s5J" firstAttribute="width" secondItem="pWO-r2-bl6" secondAttribute="width" multiplier="0.75" id="7ta-Fi-OBT"/>
+                            <constraint firstItem="Udp-eV-PTS" firstAttribute="height" secondItem="pWO-r2-bl6" secondAttribute="height" multiplier="0.9" id="9Na-mN-rVA"/>
+                            <constraint firstItem="Udp-eV-PTS" firstAttribute="centerX" secondItem="pWO-r2-bl6" secondAttribute="centerX" id="CQF-xi-07O"/>
                             <constraint firstItem="mkb-ce-s5J" firstAttribute="centerX" secondItem="pWO-r2-bl6" secondAttribute="centerX" id="Gdp-PB-ePR"/>
                             <constraint firstItem="mkb-ce-s5J" firstAttribute="centerY" secondItem="pWO-r2-bl6" secondAttribute="centerY" id="Hec-0K-hAt"/>
                             <constraint firstItem="mkb-ce-s5J" firstAttribute="height" secondItem="pWO-r2-bl6" secondAttribute="height" multiplier="0.8" id="Otw-gQ-sI4"/>
+                            <constraint firstItem="Udp-eV-PTS" firstAttribute="centerY" secondItem="pWO-r2-bl6" secondAttribute="centerY" id="yM5-AK-oLq"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="关于ITSC" id="VlC-WL-fr0"/>
                     <connections>
+                        <outlet property="cLabel" destination="Udp-eV-PTS" id="GvW-kW-aVP"/>
                         <outlet property="label" destination="mkb-ce-s5J" id="GPb-kI-PlB"/>
                     </connections>
                 </viewController>
@@ -398,7 +418,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="PZi-wU-z0q"/>
+        <segue reference="eJE-rh-H1B"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="desktopcomputer" catalog="system" width="128" height="101"/>
